--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
         "build": "vite build --config vite/config.prod.mjs"
     },
     "dependencies": {
+        "mobx": "^6.8.0",
+        "mobx-react-lite": "^3.4.2",
         "phaser": "^3.80.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.8.1",
-        "mobx": "^6.8.0",
-        "mobx-react-lite": "^3.4.2"
+        "react-router-dom": "^6.8.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.58",
