--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "phaser": "^3.80.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.8.1"
+        "react-router-dom": "^6.8.1",
+        "seedrandom": "^3.0.5"
     },
     "devDependencies": {
         "@types/react": "^18.2.58",
