--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "build": "vite build --config vite/config.prod.mjs"
     },
     "dependencies": {
+        "firebase": "^10.11.1",
         "mobx": "^6.8.0",
         "mobx-react-lite": "^3.4.2",
         "phaser": "^3.80.1",
