--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "phaser": "^3.80.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-leaderboard": "^0.0.3",
         "react-router-dom": "^6.8.1",
         "seedrandom": "^3.0.5"
     },
